--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="cat-container">
     <div class="cat-box">
       <a href="https://www.inprnt.com/gallery/natefink/">
-        <img src="file:///D:/downloads%20real/cat%201.png" alt="Print store">
+        <img src="cat1.png" alt="Print store">
       </a>
       <h2 class="cat-label">Print store</h2>
     </div>
