--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     
     <div class="cat-box">
       <a href="https://www.instagram.com/natefink_/">
-        <img src="file:///D:/downloads%20real/CAT%202.png" alt="Instagram">
+        <img src="natefink.com/CAT 2.png" alt="Instagram">
       </a>
       <h2 class="cat-label">Instagram</h2>
     </div>
