--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <div class="cat-box">
       <a href="https://www.youtube.com/@natefink7945">
-        <img src="file:///D:/downloads%20real/cat%203.png" alt="Films">
+        <img src="https://github.com/NateFink123/natefink.com/blob/main/cat%203.png" alt="Films">
       </a>
       <h2 class="cat-label">Films</h2>
     </div>
