--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
   <div class="cat-container">
     <div class="cat-box">
       <a href="https://www.inprnt.com/gallery/natefink/">
-        <img src="CAT 2.png" alt="Print store">
+        <img src="https://github.com/NateFink123/natefink.com/blob/main/cat%201.png" alt="Print store">
       </a>
       <h2 class="cat-label">Print store</h2>
     </div>
     
     <div class="cat-box">
       <a href="https://www.instagram.com/natefink_/">
-        <img src="natefink.com/CAT 2.png" alt="Instagram">
+        <img src="https://github.com/NateFink123/natefink.com/blob/main/CAT%202.png" alt="Instagram">
       </a>
       <h2 class="cat-label">Instagram</h2>
     </div>
@@ -62,14 +62,14 @@
   </div>
 
   <div class="cat-gif">
-    <img src="file:///D:/downloads%20real/ezgif-5-478a91e6b6.gif" alt="Cat Walking">
+    <img src="https://github.com/NateFink123/natefink.com/blob/main/ezgif-5-478a91e6b6.gif" alt="Cat Walking">
   </div>
 
-   <audio controls autoplay>
-            <source src="file:///D:/downloads%20real/fart.mp3.mp3" type="audio/mp3">
+   <audio autoplay>
+            <source src="https://github.com/NateFink123/natefink.com/blob/main/fart.mp3.mp3" type="audio/mp3">
          </audio>
 	<audio id="musicplayer" autoplay>
-  <source src="file:///D:/downloads%20real/fart.mp3.mp3" />
+  <source src="https://github.com/NateFink123/natefink.com/blob/main/fart.mp3.mp3" />
 </audio>
 </body>
 </html>
