--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       text-align: center;
-      background-image: url('file:///D:/downloads%20real/web%20bg.JPG');
+      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVjktfxGZXeqPPvKAEsx2jKVaOui4pHYqlVQ&usqp=CAU');
       background-size: cover;
       background-position: center;
     }
@@ -41,35 +41,35 @@
   <div class="cat-container">
     <div class="cat-box">
       <a href="https://www.inprnt.com/gallery/natefink/">
-        <img src="https://github.com/NateFink123/natefink.com/blob/main/cat%201.png" alt="Print store">
+        <img src="https://natefink123.github.io/natefink.com/cat%201.png" alt="Print store">
       </a>
       <h2 class="cat-label">Print store</h2>
     </div>
     
     <div class="cat-box">
       <a href="https://www.instagram.com/natefink_/">
-        <img src="https://github.com/NateFink123/natefink.com/blob/main/CAT%202.png" alt="Instagram">
+        <img src="https://natefink123.github.io/natefink.com/CAT%202.png" alt="Instagram">
       </a>
       <h2 class="cat-label">Instagram</h2>
     </div>
     
     <div class="cat-box">
       <a href="https://www.youtube.com/@natefink7945">
-        <img src="https://github.com/NateFink123/natefink.com/blob/main/cat%203.png" alt="Films">
+        <img src="https://natefink123.github.io/natefink.com/cat%203.png" alt="Films">
       </a>
       <h2 class="cat-label">Films</h2>
     </div>
   </div>
 
   <div class="cat-gif">
-    <img src="https://github.com/NateFink123/natefink.com/blob/main/ezgif-5-478a91e6b6.gif" alt="Cat Walking">
+    <img src="https://natefink123.github.io/natefink.com/ezgif-5-478a91e6b6.gif" alt="Cat Walking">
   </div>
 
    <audio autoplay>
-            <source src="https://github.com/NateFink123/natefink.com/blob/main/fart.mp3.mp3" type="audio/mp3">
+            <source src="https://natefink123.github.io/natefink.com/fart.mp3.mp3" type="audio/mp3">
          </audio>
 	<audio id="musicplayer" autoplay>
-  <source src="https://github.com/NateFink123/natefink.com/blob/main/fart.mp3.mp3" />
+  <source src="https://natefink123.github.io/natefink.com/fart.mp3.mp3" />
 </audio>
 </body>
 </html>
