--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       text-align: center;
-      background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVjktfxGZXeqPPvKAEsx2jKVaOui4pHYqlVQ&usqp=CAU');
+      background-image: url('https://media.tenor.com/A9PBwknDlsQAAAAd/heavy-wind-world-meteorological-day.gif');
       background-size: cover;
       background-position: center;
     }
@@ -66,9 +66,10 @@
   </div>
 
    <audio autoplay>
-            <source src="https://natefink123.github.io/natefink.com/fart.mp3.mp3" type="audio/mp3">
-         </audio>
-	<audio id="musicplayer" autoplay>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   <source src="https://natefink123.github.io/natefink.com/fart.mp3.mp3" />
 </audio>
 </body>
