--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 
    <audio autoplay>
-  <source src="horse.ogg" type="audio/ogg">
+  <source src="https://natefink123.github.io/natefink.com/fart.mp3.mp3" type="audio/ogg">
   <source src="horse.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
