--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img src="https://natefink123.github.io/natefink.com/ezgif-5-478a91e6b6.gif" alt="Cat Walking">
   </div>
 
-   <audio autoplay>
+   <audio controls autoplay>
   <source src="https://natefink123.github.io/natefink.com/fart.mp3.mp3" type="audio/ogg">
   <source src="horse.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
