--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>nate fink</title>
+  <title></title>
   <style>
     body {
       text-align: center;
@@ -22,12 +22,12 @@
     }
 
     .cat-box {
-      margin: 0 10px;
+      margin: 0 50px;
       text-align: center;
     }
 
     .cat-label {
-      margin-top: 10px;
+      margin-top: 50px;
     }
 
     .cat-gif {
