--- a/index.html
+++ b/index.html
@@ -41,21 +41,27 @@
   <div class="cat-container">
     <div class="cat-box">
       <a href="https://www.inprnt.com/gallery/natefink/">
-        <img src="https://natefink123.github.io/natefink.com/cat%201.png" alt="Print store">
+        <img src="https://natefink123.github.io/natefink.com/cat%201.png" alt="Print store"
+             	width="200"
+		height="200">
       </a>
       <h1 class="cat-label">Print store</h1>
     </div>
     
     <div class="cat-box">
       <a href="https://www.instagram.com/natefink_/">
-        <img src="https://natefink123.github.io/natefink.com/CAT%202.png" alt="Instagram">
+        <img src="https://natefink123.github.io/natefink.com/CAT%202.png" alt="Instagram"
+             	width="200"
+		height="200">
       </a>
       <h1 class="cat-label">Instagram</h1>
     </div>
     
     <div class="cat-box">
       <a href="https://www.youtube.com/@natefink7945">
-        <img src="https://natefink123.github.io/natefink.com/cat%203.png" alt="Films">
+        <img src="https://natefink123.github.io/natefink.com/cat%203.png" alt="Films"
+             	width="200"
+		height="200">
       </a>
       <h1 class="cat-label">Films</h1>
     </div>
