--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1></h1>
+  <h1>nate fink . com</h1>
   
   <div class="cat-container">
     <div class="cat-box">
