--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>nate fink . com</h1>
+  <h1><FONT COLOR=red><p style="font-family:'Courier New'">nate fink . com<FONT COLOR=black></h1>
   
   <div class="cat-container">
     <div class="cat-box">
@@ -80,4 +80,5 @@
 </audio>
 </body>
 </html>
+
 
